force-app/main/default/objects/Country_Info__mdt/fields/Country_Label__c.field-meta.xml
<CustomField>
    <fullName>Country_Label__c</fullName>
    <description>Valid Country full name.</description>
    <inlineHelpText>Valid Country full name.</inlineHelpText>
    <label>Country Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>