force-app/main/default/objects/Country_Info__mdt/fields/State_Label__c.field-meta.xml
<CustomField>
    <fullName>State_Label__c</fullName>
    <description>Valid State full name.</description>
    <inlineHelpText>Valid State full name.</inlineHelpText>
    <label>State Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>